[workspace]
members = [
    "pact_*"
]
exclude = [
    "pact_mock_server",
    "pact_mock_server_cli",
    "pact_wasm",
    "pact_cli"
]
resolver = "2"

[patch.crates-io]
onig = { git = "https://github.com/rust-onig/rust-onig", default-features = false }
pact_models = { path = "./pact_models" }
pact_mock_server = { path = "../../pact-core-mock-server/pact_mock_server"}
pact-plugin-driver = { path = "../../pact-plugins/drivers/rust/driver" }
# pact_models = { version="1.2.0", path="./pact_models" }
# pact_models2 = { version="~1.2.1", path="./pact_models",package = "pact_models" }