[workspace]
members = [
    "pact_*"
]
exclude = [
    "pact_mock_server",
    "pact_mock_server_cli",
    "pact_wasm",
    "pact_cli"
]
resolver = "2"

[profile.release]
strip = true
opt-level = "z"
codegen-units = 1

[patch.crates-io]
onig = { git = "https://github.com/rust-onig/rust-onig", default-features = false }
pact_models = { path = "./pact_models" }
pact_matching = { path = "./pact_matching" }
pact_mock_server = { git = 'https://github.com/pact-foundation/pact-core-mock-server.git', branch = "issue/134_missing_buffer_logs" }
pact-plugin-driver = { git = 'https://github.com/pact-foundation/pact-plugins.git', branch = "issue/134_missing_buffer_logs" }
